  . Fixed Bug #54221 (mysqli::get_warnings segfault when used in multi queries).
    (Andrey)

- mysqlnd
  . Fixed crash when using more than 28,000 bound parameters. Workaround is to
    set mysqlnd.net_cmd_buffer_size to at least 9000. (Andrey)
    
- PDO DBlib driver:
  . Fixed bug #54167 (PDO_DBLIB returns null on SQLUNIQUE field).
    (mjh at hodginsmedia dot com, Felipe)

- PDO PostgreSQL driver:
  . Fixed bug #54318 (Non-portable grep option used in PDO pgsql
    configuration). (bwalton at artsci dot utoronto dot ca)

- PDO Oracle driver:
  . Fixed bug #44989 (64bit Oracle RPMs still not supported by pdo-oci).
    (jbnance at tresgeek dot net)

- Phar extension:
  . Fixed bug #54395 (Phar::mount() crashes when calling with wrong parameters).
    (Felipe)

- SOAP extension:
  . Fixed bug #54312 (soap_version logic bug). (tom at samplonius dot org)

- Sockets extension:
  . Changed socket_set_block() and socket_set_nonblock() so they emit warnings
    on error. (Gustavo)
  . Fixed bug #51958 (socket_accept() fails on IPv6 server sockets). (Gustavo)

- SPL extension:
  . Fixed bug #54384 (Dual iterators, GlobIterator, SplFileObject and
    SplTempFileObject crash when user-space classes don't call the paren
    constructor). (Gustavo)
  . Fixed bug #54292 (Wrong parameter causes crash in
    SplFileObject::__construct()). (Felipe)
  . Fixed bug #54291 (Crash iterating DirectoryIterator for dir name starting
    with \0). (Gustavo)
  . Fixed bug #54281 (Crash in non-initialized RecursiveIteratorIterator).
    (Felipe)

17 Mar 2011, PHP 5.3.6
- Upgraded bundled Sqlite3 to version 3.7.4. (Ilia)
- Upgraded bundled PCRE to version 8.11. (Ilia)

- Zend Engine:
  . Indirect reference to $this fails to resolve if direct $this is never used
    in method. (Scott)
  . Added options to debug backtrace functions. (Stas)
  . Fixed bug numerous crashes due to setlocale (crash on error, pcre, mysql
    etc.) on Windows in thread safe mode. (Pierre)